# hexenly

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/hexenly-app/: Cargo.toml
crates/hexenly-app/src/: app.rs  main.rs  theme.rs
crates/hexenly-app/src/panels/: bookmarks.rs  hex_view.rs  inspector.rs  layers.rs  mod.rs  structure.rs  templates.rs
crates/hexenly-core/: Cargo.toml
crates/hexenly-core/src/: edit_buffer.rs  file.rs  interpret.rs  lib.rs  search.rs  selection.rs
crates/hexenly-templates/: Cargo.toml
crates/hexenly-templates/src/: engine.rs  lib.rs  loader.rs  parser.rs  resolved.rs  schema.rs  validator.rs
docs/: hexenly-design-doc.docx  hexenly-design-doc.md  logo.xcf
docs/plans/: 2026-02-23-drag-drop-editing-menus-design.md  2026-02-23-drag-drop-editing-menus.md  2026-02-23-phase4a-visual-polish-design.md  2026-02-23-phase4a-visual-polish.md  2026-02-23-phase4b-design.md  2026-02-23-phase4b.md  2026-02-25-template-layers-computed-fields-design.md  2026-02-25-template-layers-computed-fields.md
templates/archives/: 7z.toml  gzip.toml  tar.toml  xz.toml  zip.toml
templates/databases/: sqlite.toml
templates/documents/: pdf.toml
templates/executables/: elf.toml  java-class.toml  macho.toml  pe.toml  wasm.toml
templates/filesystems/: cybiko-cfs.toml  ebr.toml  fat16.toml  fat32.toml  gpt.toml  iso9660.toml  mbr.toml
templates/fonts/: ttf.toml
templates/images/: bmp.toml  gif.toml  ico.toml  jpeg.toml  png.toml  tiff.toml  webp.toml
templates/media/: flac.toml  mp3.toml  ogg.toml  wav.toml
templates/networking/: pcap.toml
