[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/hexenly/hexenly"

[workspace.dependencies]
eframe = "0.33"
egui = "0.33"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
rfd = "0.15"

hexenly-core = { path = "crates/hexenly-core" }
hexenly-templates = { path = "crates/hexenly-templates" }
