[package]
name = "hexenly-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hexenly-core = { workspace = true }
hexenly-templates = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
